<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Path -->
    <TextView
      android:id="@+id/tvPath"
      android:layout_marginTop="5sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/output_folder"
      android:textSize="18sp" />
    <TextView
      android:id="@+id/tvBrowseOutputCapture"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/back"
      android:text="@string/empty"
      android:textSize="18sp" />

    <!-- Devices -->
    <TextView
      android:id="@+id/tvDevices"
      android:layout_marginTop="10sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/devices"
      android:textSize="18sp" />
    <Spinner
      android:id="@+id/spDevices"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <Button
      android:id="@+id/btRefresh"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/refresh" />

    <!-- Promiscuous mode -->
    <CheckBox
      android:id="@+id/cbPromiscuous"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20sp"
      android:checked="true"
      android:text="@string/promiscuous"
      android:textSize="18sp" />

    <!-- Start -->
    <ToggleButton
      android:id="@+id/btCapture"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textOff="@string/toggle_on"
      android:textOn="@string/toggle_off" />

    <!-- Log -->
    <TextView
      android:id="@+id/tvResult"
      android:layout_marginTop="20sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/log"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/tvShowResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5sp"
      android:background="@drawable/back"
      android:lines="20"
      android:maxLines="50"
      android:scrollbars="vertical"
      android:text="@string/empty"
      android:textSize="12sp"
      android:padding="3dp"/>

  </LinearLayout>

</ScrollView>