<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/rootLL"
  android:padding="10dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilSearch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tieSearch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/search"
      android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <CheckBox
        android:id="@+id/cbId"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/search_id" />

      <CheckBox
        android:id="@+id/cbProtocol"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/search_protocol" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <CheckBox
        android:id="@+id/cbTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/search_time" />

      <CheckBox
        android:id="@+id/cbInfo"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/search_info" />

    </LinearLayout>

  </LinearLayout>
</LinearLayout>